# main2main_workflow

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: sync-upstream.yml
docs/: guide.md  workflow.md
src/TA_main2main_workflow/: flow.py  main.py  utils.py
src/TA_main2main_workflow/agent/: opencode_adapter.py  prompt.md
src/TA_main2main_workflow/reference/: adapt-guide.md  code-structure-guide.md  diagnosis-guide.md  error-pattern-examples.md  npu-oom-handling.md
src/TA_main2main_workflow/scripts/: build_test.py  detect_commits.py  merge_upstream.py  plan_steps.py  pre_ci_check.py  push_to_github.py  update_commit_reference.py
